--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,9 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src * data: blob: 'unsafe-inline' 'unsafe-eval'; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src *; img-src * data:; style-src * 'unsafe-inline'; frame-src *;"
+          "value": "default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://base-mainnet.g.alchemy.com wss://*.walletconnect.org;"
         }
       ]
     }
   ]
 }
-
